# rust_fps

./: Cargo.toml
src/: camera.rs  gltf.rs  input.rs  main.rs  octagon.blend  octagon.blend1  octagon.gltf  renderer.rs
src/assets/: render_test_scene.gltf  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/code/components/: position.rs  rotation.rs
