[package]
name = "game"
version = "0.1.0"
authors = ["Dmajster <domen.rostohar98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
wgpu = "0.6"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = "1.4"

legion = "0.3.1"



[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.6"
